# devops_final

./: Deanery.cpp  Deanery.h  Dockerfile  Group.cpp  Group.h  Student.cpp  Student.h  readme.md
.github/workflows/: cpp.yml
clean/: Dockerfile
clean/src/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
src/: CMakeLists.txt  Calculator.cpp  Deanery.cpp  Deanery.h  Group.cpp  Group.h  Student.cpp  Student.h  main.cpp  test.cpp  tests.cpp
test/src/: Calculator.h  main.cpp  test.cpp
